compiler/tests/compiler/must_fail/t_06.rs.exp.err
tests/compiler/must_fail/t_06.rs:5:12: 5:14 error: duplicate function name :foo
decl! { fn foo(x: stack! (b64)); }
           ^^^
